--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,6 @@
   <version>1.0-SNAPSHOT</version>
 
   <properties>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -19,9 +17,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
         <configuration>
-          <!-- Preview features enabled for unnamed variables -->
-          <compilerArgs>--enable-preview</compilerArgs>
+          <source>21</source>
+          <target>21</target>
+          <!-- Preview features are required for unnamed variables -->
+          <enablePreview>true</enablePreview>
         </configuration>
       </plugin>
     </plugins>
